[package]
name = "admin-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <nicolas@solokeys.com>"]
repository = "https://github.com/solokeys/admin-app"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Administrative Trussed app for SoloKeys Solo 2 security keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = "0.1"
ctaphid-dispatch = "0.1"
delog = "0.1"
iso7816 = "0.1"
trussed = "0.1"

[features]
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
